spyre-rag/dd2-openshift-hosting/deployment/deploy_granite_embed_278_multi.yaml
apiVersion: apps/v1
kind: Deployment
# spec:
#   schedulerName: aiu-scheduler
metadata:
  name: granite-embedding-multi
  namespace: spyre-showcase-dev #default
  labels:
    app: granite-embedding-multi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: granite-embedding-multi
  template:
    metadata:
      labels:
        app: granite-embedding-multi
    spec:
      schedulerName: aiu-scheduler
      volumes:
      - name: hf-cache-volume
        persistentVolumeClaim:
          claimName: hf-cache
      # vLLM needs to access the host's shared memory for tensor parallel inference.
      - name: shm
        emptyDir:
          medium: Memory
          sizeLimit: "2Gi"
      # vLLM can cache model graphs previously compiled on Spyre cards
      - name: graph-cache-volume
        persistentVolumeClaim:
          claimName: graph-cache
      containers:
      - name: vllm
        # image: quay.io/ibm-aiu/vllm-spyre:latest.amd64
        #image: icr.io/ibmaiu_internal/x86_64/vllm/dd2/aiu-vllm-dev@sha256:110ee3a8b00a5ff2d13299b2b3b8ff34569f58c77459697575f1a412ee9feb6a
        # args: [
        # #   #"#ibm-granite/granite-3.1-8b-instruct"
        #    "ibm-granite/granite-embedding-278m-multilingual"
        #  ]
        # image: quay.io/ibm-aiu/vllm-spyre:latest.amd64
        image: icr.io/ibmaiu_internal/x86_64/vllm/dd2/aiu-vllm-dev@sha256:110ee3a8b00a5ff2d13299b2b3b8ff34569f58c77459697575f1a412ee9feb6a
        workingDir: /tmp/
        command:
          - /usr/bin/bash
          - '-c' 
        args:
          - |
            source /etc/profile.d/ibm-aiu-setup.sh
            source /opt/vllm/bin/activate
            vllm serve ${SERVED_MODEL_NAME} --port 8000 --task embed --max-model-len=512
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: "10"
            ibm.com/aiu_pf: "1"
            memory: 80G
          requests:
            cpu: "2"
            ibm.com/aiu_pf: "1"
            memory: 80G

        volumeMounts:
        - mountPath: /sdana027_hf 
          name: hf-cache-volume
        - mountPath: /dev/shm
          name: shm
        - mountPath: /sdana027_graph 
          name: graph-cache-volume
       
---
apiVersion: v1
kind: Service
metadata:
  name: granite-embedding-multi
  namespace: spyre-showcase-dev #default
spec:
  ports:
  - name: http-granite-embedding-multi
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: granite-embedding-multi
  sessionAffinity: None
  type: ClusterIP
