spyre-rag/dd2-openshift-hosting/deployment/deploy_granite_instruct_model.yaml
apiVersion: apps/v1
kind: Deployment
# spec:
#   schedulerName: aiu-scheduler
metadata:
  name: granite-8b-instruct
  namespace: spyre-showcase-dev #default
  labels:
    app: granite-8b-instruct
spec:
  replicas: 1
  selector:
    matchLabels:
      app: granite-8b-instruct
  template:
    metadata:
      labels:
        app: granite-8b-instruct
    spec:
      schedulerName: aiu-scheduler
      volumes:
      - name: hf-cache-volume
        persistentVolumeClaim:
          claimName: hf-cache
      # vLLM needs to access the host's shared memory for tensor parallel inference.
      - name: shm
        emptyDir:
          medium: Memory
          sizeLimit: "2Gi"
      # vLLM can cache model graphs previously compiled on Spyre cards
      - name: graph-cache-volume
        persistentVolumeClaim:
          claimName: graph-cache
      containers:
      - name: vllm
        image: quay.io/ibm-aiu/vllm-spyre:latest.amd64
        #image: icr.io/ibmaiu_internal/amd64/vllm/aiu-vllm:latest ### this is used by Claudia
        args: [
          #"#ibm-granite/granite-3.1-8b-instruct"
          "ibm-granite/granite-3.3-8b-instruct"
        ]
        ports:
        - containerPort: 8000
        resources:
          limits:
            cpu: "10"
            ibm.com/aiu_pf: "1"
            memory: 256G
          requests:
            cpu: "2"
            ibm.com/aiu_pf: "1"
            memory: 256G
        volumeMounts:
        - mountPath: /sdana027_hf #/root/.cache/huggingface
          name: hf-cache-volume
        - mountPath: /dev/shm
          name: shm
        - mountPath: /sdana027_graph #/root/.cache/torch
          name: graph-cache-volume
        #livenessProbe:
          #httpGet:
            #path: /health
            #port: 8000
          # Long startup delays are necessary for graph compilation
          #initialDelaySeconds: 600 #1200
          #progressDeadlineSeconds: 600
          #periodSeconds: 10
        #readinessProbe:
          #httpGet:
            #path: /health
            #port: 8000
          #initialDelaySeconds: 600
          #periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: granite-8b-instruct
  namespace: spyre-showcase-dev #default
spec:
  ports:
  - name: http 
    port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: granite-8b-instruct
  sessionAffinity: None
  type: ClusterIP
