spyre-rag/dd2-openshift-hosting/deployment/route_granite_instruct.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: granite-8b-instruct
  namespace: spyre-showcase-dev
  labels:
    app: granite-8b-instruct  #sdana-vllm
  annotations:
    description: Route for Decision Central's http service.
    haproxy.router.openshift.io/timeout: 500s  
spec:
  host: granite-8b-instruct-spyre-showcase-dev.apps.dev.spyre.res.ibm.com
  to:
    kind: Service
    name: granite-8b-instruct
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
